--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
 	<artifactId>hadoop</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
+
+		<!-- github测试 -->
 		<dependency>
 			<groupId>jdk.tools</groupId>
 			<artifactId>jdk.tools</artifactId>
@@ -12,7 +14,6 @@
 			<scope>system</scope>
 			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-client -->
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
